--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -29,6 +29,28 @@ give_date <- function(filename, dataframe = mod_times){
 }
 ```
 
+# All files
+
+1. [Main results](01_Results.html)  `r give_date("01_Results.html")`
+
+# Methods / Individual analyses {#methods}
+
+For an overview of how the files were downloaded, please see this file:
+
+1. [Data download](./00_Download_files.html) `r give_date("00_Download_files.html")`
+
+The rendered markdown files for the individual research questions can be found here:
+
+1. Q1: [Do the Reddy RNA-seq experiments show the same DE pattern as our experiments? (12h data)](./Q1-Gene-overlap.html) `r give_date("Q1-Gene-overlap.html")`
+1. Q1: [Do the Reddy RNA-seq experiments show the same DE pattern as our experiments? (2h data)](./Q1b-Gene-overlap-2h.html) `r give_date("Q1b-Gene-overlap-2h.html")`
+1. Q2: [Does the Reddy data show GR binding to DE genes from our analysis? (12h data)](./Q2-TF-Binding-to-DE-genes.html) `r give_date("Q2-TF-Binding-to-DE-genes.html")`
+1. Q2: [Does the Reddy data show GR binding to DE genes from our analysis? (2h data)](./Q2b-TF-Binding-to-DE-genes-2h.html) `r give_date("Q2b-TF-Binding-to-DE-genes-2h.html")`
+1. Q3: [Is this the PROTAC able to reverse the effect of DEX on genes where inhibitors don't work?](./Q3-PROTAC-reversal.html) `r give_date("Q3-PROTAC-reversal.html")`
+1. Q4: [Is there a direct binding of GR to the 13 genes shown to be affected by the KH PROTAC?](./Q4-GR-binding-PROTAC-genes.html) `r give_date("Q4-GR-binding-PROTAC-genes.html")`
+1. Q7: [Does GC-GR bind to PRX sequences?](./Q7-PRX-sequences.html) `r give_date("Q7-PRX-sequences.html")`
+1. Q9: [How does differential binding relate to RNA DE results?](./Q9-Differential_binding.html) `r give_date("Q9-Differential_binding.html")`
+1. Q11: [MR peaks](./Q11-MR_paper) `r give_date("Q11-MR_paper.html")`
+
 # Overview
 
 In this analysis I've combined previous work on glucocorticoids and PROTACs (RNA-seq) with external data (RNA-seq, ATAC-seq, ChIP-seq) to better understand the effects of glucocorticoids on DNA regulation. A short introduction is provided in the following.
